# opengl-arkanoid

./: CMakeLists.txt  README.md
res/shaders/particle/: shader.frag  shader.vert
res/shaders/postprocessing/: shader.frag  shader.vert
src/: Ball.cpp  Ball.h  Brick.cpp  Brick.h  EventHandlers.h  FileManager.cpp  FileManager.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  InputManager.cpp  InputManager.h  Level.cpp  Level.h  Paddle.cpp  Paddle.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Singleton.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp  Texture.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h  main.cpp
src/audio/: AudioManager.cpp  AudioManager.h
src/game/: Ball.cpp  Ball.h  Brick.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameState.h  Level.cpp  Level.h  Paddle.cpp  Paddle.h  Powerup.cpp  Powerup.h  PowerupType.h
src/graphics/: Font.h  GlyphInfo.h  Particle.h  ParticleEmitter.cpp  ParticleEmitter.h  PostProcessing.cpp  PostProcessing.h  PostProcessingEffect.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  ShaderType.h  SpriteRenderer.cpp  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
src/input/: InputManager.cpp  InputManager.h
src/physics/: Collision.h  CollisionDetector.cpp  CollisionDetector.h
src/utils/: AssetManager.cpp  AssetManager.h  AudioFile.h  AudioManager.h  Constants.h  FileManager.cpp  FileManager.h  Random.cpp  Random.h  ResourceManager.cpp
